feat: change endpoint name
